fix(karaf): ENTESB-16987 - Broken layout for drop-down menu in OSGi -> Features

--- a/plugins/global.less
+++ b/plugins/global.less
@@ -69,3 +69,9 @@ pf-toolbar > .container-fluid, pf-table-view > .container-fluid {
   padding-left: 0;
   padding-right: 0;
 }
+
+// Override pf-toolbar's default dropdown-menu-right class
+pf-filter-fields .dropdown-menu {
+  right: auto;
+  left: 0;
+}
